# DevAgent-CLI

./: .env.example  .gitignore  CLI_GUIDE.md  README.md  SHELL_GUIDE.md  pyproject.toml
devagent/: __init__.py
devagent/cli/: __init__.py  main.py  prompts.py  renderers.py  ui.py
devagent/config/: settings.py
devagent/context/: __init__.py  indexer.py  retriever.py  scanner.py
devagent/core/: actions.py  agent.py  orchestrator.py  project.py  session_store.py  shell.py  structured_answers.py
devagent/tools/: ai.py  edit_tool.py  file_tool.py  git_tool.py  insights.py  node_tool.py  runtime_tool.py  search_tool.py  setup_tool.py
devagent/watcher/: __init__.py  file_watcher.py
tests/: test_agent_shell.py  test_ai_client.py  test_edit_tool.py  test_file_tool.py  test_git_tool.py  test_indexer.py  test_insights.py  test_node_tool.py  test_project.py  test_prompts.py  test_runtime_tool.py  test_setup_tool.py  test_structured_answers.py  test_ui.py
